# Fractal_Flame

./: .gitignore  CMakeLists.txt  execute.sh  fractal_flame  fractal_flame.cpp  fractal_flame.cu  fractal_flame_frontend.cpp  last-build.sh  readme.md
engines/: engine.h  openmp_engine.cpp  serial_engine.cpp
